--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.31.1
-altair==4.2.2
-yfinance
-pandas
-plotly
+streamlit>=1.31
+yfinance>=0.2.36
+pandas>=2.1
+plotly>=5.18
+numpy>=1.26
